// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create a component with a function attribute 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "component": null,
      "type": 0,
      "value": [Function],
    },
  ],
  "component": Object {
    "slots": Array [
      Slot {
        "name": "click",
        "path": Array [],
        "type": 1,
      },
    ],
    "template": "<button></button>",
  },
  "type": 2,
  "value": null,
}
`;

exports[`create a component with a nested component child 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "component": Object {
        "slots": Array [],
        "template": "<b>foo</b>",
      },
      "type": 2,
      "value": null,
    },
  ],
  "component": Object {
    "slots": Array [
      Slot {
        "name": null,
        "path": Array [
          0,
        ],
        "type": 0,
      },
    ],
    "template": "<p></p>",
  },
  "type": 2,
  "value": null,
}
`;

exports[`create a component with a primitive attribute 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "component": null,
      "type": 0,
      "value": "foo",
    },
  ],
  "component": Object {
    "slots": Array [
      Slot {
        "name": "id",
        "path": Array [],
        "type": 1,
      },
    ],
    "template": "<p id=\\"🦄\\"></p>",
  },
  "type": 2,
  "value": null,
}
`;

exports[`create a component with a primitive attribute without quotes 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "component": null,
      "type": 0,
      "value": "foo bar",
    },
  ],
  "component": Object {
    "slots": Array [
      Slot {
        "name": "id",
        "path": Array [],
        "type": 1,
      },
    ],
    "template": "<p id=\\"🦄\\"></p>",
  },
  "type": 2,
  "value": null,
}
`;

exports[`create a component with a primitive child 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "component": null,
      "type": 0,
      "value": "foo",
    },
  ],
  "component": Object {
    "slots": Array [
      Slot {
        "name": null,
        "path": Array [
          0,
        ],
        "type": 0,
      },
    ],
    "template": "<b></b>",
  },
  "type": 2,
  "value": null,
}
`;

exports[`create a component with a sequence child 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "component": null,
              "type": 0,
              "value": "foo",
            },
          ],
          "component": Object {
            "slots": Array [
              Slot {
                "name": null,
                "path": Array [
                  0,
                ],
                "type": 0,
              },
            ],
            "template": "<b></b>",
          },
          "type": 2,
          "value": null,
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "component": null,
              "type": 0,
              "value": "bar",
            },
          ],
          "component": Object {
            "slots": Array [
              Slot {
                "name": null,
                "path": Array [
                  0,
                ],
                "type": 0,
              },
            ],
            "template": "<b></b>",
          },
          "type": 2,
          "value": null,
        },
      ],
      "component": Object {
        "slots": Array [
          Slot {
            "name": null,
            "path": Array [
              0,
            ],
            "type": 0,
          },
        ],
        "template": "<b></b>",
      },
      "type": 1,
      "value": null,
    },
  ],
  "component": Object {
    "slots": Array [
      Slot {
        "name": null,
        "path": Array [
          0,
        ],
        "type": 0,
      },
    ],
    "template": "<p></p>",
  },
  "type": 2,
  "value": null,
}
`;

exports[`create a component with dummy text nodes 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "component": null,
      "type": 0,
      "value": "foo",
    },
  ],
  "component": Object {
    "slots": Array [
      Slot {
        "name": null,
        "path": Array [
          0,
        ],
        "type": 0,
      },
    ],
    "template": "<b>
  </b>",
  },
  "type": 2,
  "value": null,
}
`;

exports[`create a component with mixed attributes 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "component": null,
      "type": 0,
      "value": "foo",
    },
  ],
  "component": Object {
    "slots": Array [
      Slot {
        "name": "id",
        "path": Array [],
        "type": 1,
      },
    ],
    "template": "<p id=\\"🦄\\" class=\\"bar\\"></p>",
  },
  "type": 2,
  "value": null,
}
`;

exports[`create a simple component 1`] = `
Object {
  "children": Array [],
  "component": Object {
    "slots": Array [],
    "template": "<b>foo</b>",
  },
  "type": 2,
  "value": null,
}
`;

exports[`remove function attributes but keep others 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "component": null,
      "type": 0,
      "value": [Function],
    },
  ],
  "component": Object {
    "slots": Array [
      Slot {
        "name": "click",
        "path": Array [],
        "type": 1,
      },
    ],
    "template": "<button class=\\"foo\\"></button>",
  },
  "type": 2,
  "value": null,
}
`;
